2010-09-03  human

   * screenio.c : Convert keys according to used environment
                  for identical behaviour
                  (especially fix for PDCurses + numpad support)

2009-07-25  Gary Cutler

   * screenio.c : Fix PDCurses bug with COLOR_PAIRS

2009-02-03  Roger While <simrw@sim-basis.de>

   * intrinsic.c : Fix Cygwins busted rand function

2009-01-27  Roger While <simrw@sim-basis.de>

   * call.c : Change hyphen interpretation

2009-01-22  Roger While <simrw@sim-basis.de>

   * intrinsic.[ch] : Functions CONCATENATE and SUBSTITUTE-CASE

2009-01-20  Roger While <simrw@sim-basis.de>

   * screenio.[ch] : Minimal support for value occurs

2009-01-17  Roger While <simrw@sim-basis.de>

   * common.c, screenio.[ch] : Save/restore screen over SYSTEM call
   * General : Sanitize headers. Do not use names in prototypes

2009-01-15  Roger While <simrw@sim-basis.de>

   * screenio.[ch], termio.c - SCROLL for ACCEPT/DISPLAY

2009-01-14  Roger While <simrw@sim-basis.de>

   * screenio.[ch] - ACCEPT ... FROM LINES/COLUMNS

2008-12-20  Roger While <simrw@sim-basis.de>

   * intrinsic.[ch] : Implement SUBSTITUTE function

2008-12-10  Roger While <simrw@sim-basis.de>

   * screenio.c : Add inter-field cursor movement for screen input

2008-12-08  Roger While <simrw@sim-basis.de>

   * General : More stack reducing
   * common.h : Constify attribute pointer in cob_field

2008-12-03  Roger While <simrw@sim-basis.de>

   * General : More stack reducing
      Clean up dangling varargs

2008-11-20  Roger While <simrw@sim-basis.de>

   * General : Reduce stack usage

2008-11-15  Roger While <simrw@sim-basis.de>

   * fileio.c : Fix SORT GIVING when output is line sequential
   * common.[ch], call.[ch] : C routines for calling Cobol

2008-11-14  Roger While <simrw@sim-basis.de>

   * common.c : Always activate SIGSEGV handler

2008-10-17  Roger While <simrw@sim-basis.de>

   * common.[ch] : cob_check_based - Check BASED items
